# small_projects

./: LU-decomposition.sln  program.cpp
LU-decomposition/: LU-decomposition.cpp  LU-decomposition.vcxproj  LU-decomposition.vcxproj.filters  LU_Decomposer.cpp  LU_Decomposer.h  Matrix.cpp  Matrix.h
LU_QR_DECOMPOSITION/headers/: GR_Decomposer.h  Iteration_Method.h  LU_Decomposer.h  Matrix.h
LU_QR_DECOMPOSITION/source/: CMakeLists.txt  GR_Decomposer.cpp  Iteration_Method.cpp  LU_Decomposer.cpp  Matrix.cpp  main.cpp
headers/: GR_Decomposer.h  LU_Decomposer.h  Matrix.h  Row.h
source/: GR_Decomposer.cpp  LU_Decomposer.cpp  Matrix.cpp  Row.cpp  main.cpp
